--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/estilo.css">
     <script  src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <title>Ejemplo</title>
+    <title>IBPR</title>
 </head>
 <body>
     <header>
