Se hace responsive cuando es tamaño escritorio, tambien se añade icono de biblia

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header>
         <input type="checkbox" id="btn-menu">
         <label for="btn-menu"><img src="img/icono_2.png" width="50" height="50"></label>
-        <h1 class="titulos">IBPR</h1>
+		<h1 class="titulos">IBPR</h1>
+		<img src="img/bibliayjesucristo.png" width="50" height="40" id="icono-biblia">
         <h2 class="titulos">Ministerio Amigos de Jesús</h2>
         <nav class="menu">
             <ul>
