--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <input type="checkbox" id="btn-menu">
-        <label for="btn-menu"><img src="img/icono_2.png" width="50" height="50"></label>
+        <label for="btn-menu"><img src="img/icono_menu.png" width="50" height="50"></label>
 		<h1 class="titulos">IBPR</h1>
-		<img src="img/bibliayjesucristo.png" width="50" height="40" id="icono-biblia">
+		<img src="img/icono_biblia.png" width="50" height="40" id="icono-biblia">
         <h2 class="titulos">Ministerio Amigos de Jesús</h2>
         <nav class="menu">
             <ul>
