Se intenta añadir mision-vision y valores. Obs:falta añadir estilo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <a href="#">Inicio</a>
                 <a href="#">Nosotros</a>
                 <a href="#">Blog</a>
+                <a href="">Radio</a>
                 <a href="#">Contáctos</a>
                 <a href="#">Login</a>
             </ul>
@@ -46,6 +47,20 @@
         <div id="btn-prev">&#60;</div>
         <div id="btn-next">&#62;</div>
         
+        <section>
+            <p id="texto_1" class="textos">
+                <strong>Misión</strong><br>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi illo dignissimos, nemo maxime quam sequi molestias laboriosam, vero, aperiam accusantium tempora atque id quod exercitationem minima nulla quas quos cupiditate.
+            </p>
+            <p id="texto_2" class="textos">
+                <strong>Visión</strong><br>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam doloribus totam laboriosam excepturi rerum eum vitae eius qui quos adipisci explicabo modi, sit quis nemo quasi. Quos esse dolorum aut.
+            </p>
+            <p id="texto_3" class="textos">
+                <strong>Valores</strong><br>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, similique? Praesentium repudiandae dolor totam tempore. Rem iste amet magnam sint perspiciatis autem nemo laborum exercitationem dicta dolorem sunt, officiis ea.
+            </p>
+        </section>
     </main>
     <script src="js/design.js"></script>
 </body>
