Se añade script d Jquey para efecto scroll, tambien se añade estilo a la mision, vision y valores

--- a/index.html
+++ b/index.html
@@ -47,18 +47,34 @@
         <div id="btn-prev">&#60;</div>
         <div id="btn-next">&#62;</div>
         
+        <main>
+            <p id="texto_0">
+                <cite>
+                    Vosotros sois mis amigos, si hacéis lo que yo os mando. <br>
+                    Juan 15:14
+                </cite> 
+            </p>
+        </main>
         <section>
             <p id="texto_1" class="textos">
                 <strong>Misión</strong><br>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi illo dignissimos, nemo maxime quam sequi molestias laboriosam, vero, aperiam accusantium tempora atque id quod exercitationem minima nulla quas quos cupiditate.
+                Hacer conocer a las personas acerca de las enseñanzas, doctrinas y fundamentos
+                que la Biblia enseña, y que lleguen al pleno conocimiento de la persona de 
+                Jesucristo, obedeciendo a ello con un testimonio real de lo que predicamos.
             </p>
             <p id="texto_2" class="textos">
                 <strong>Visión</strong><br>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam doloribus totam laboriosam excepturi rerum eum vitae eius qui quos adipisci explicabo modi, sit quis nemo quasi. Quos esse dolorum aut.
+                Llegar a todas las personas con la palabra de Dios, así como también esas 
+                personas puedan tener una transformacion y vida nueva por medio del Espíritu Santo
+                para que con ello puedan testificar del amor de Dios al mundo.
             </p>
             <p id="texto_3" class="textos">
                 <strong>Valores</strong><br>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, similique? Praesentium repudiandae dolor totam tempore. Rem iste amet magnam sint perspiciatis autem nemo laborum exercitationem dicta dolorem sunt, officiis ea.
+                Honestidad <br>
+                Sinceridad <br>
+                Transparencia <br>
+                Amor <br>
+                Compañerismo
             </p>
         </section>
     </main>
