Se modifica menu en el responsive y se quita imagen  de fondo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#">Inicio</a>
                 <a href="#">Nosotros</a>
                 <a href="#">Blog</a>
-                <a href="">Radio</a>
+                <a href=" " onclick="radio()">Radio</a>
                 <a href="#">Contáctos</a>
                 <a href="#">Login</a>
             </ul>
@@ -32,16 +32,16 @@
                 <img src="img/pez.jpg" width="850" height="580">
             </section>
             <section class="portada_1" id="dos">
-                <img src="img/biblia.jpg" width="850" height="580">
+                <!--img src="img/biblia.jpg" width="850" height="580"-->
             </section>
             <section class="portada_2" id="tres">
-                <img src="img/biblia_1.jpg" width="850" height="580">
+                <!--img src="img/biblia_1.jpg" width="850" height="580"-->
             </section>
             <section class="portada_3" id="cuatro">
-                <img src="img/biblia_2.jpg" width="850" height="580">
+                <!--img src="img/biblia_2.jpg" width="850" height="580"-->
             </section>
             <section class="portada_4" id="cinco">
-                <img src="img/cruz.jpg" width="850" height="580">
+                <!--img src="img/cruz.jpg" width="850" height="580"-->
             </section>
         </div>
         <div id="btn-prev">&#60;</div>
@@ -50,7 +50,7 @@
         <main>
             <p id="texto_0">
                 <cite>
-                    Vosotros sois mis amigos, si hacéis lo que yo os mando. <br>
+                    Vosotros sois mis amigos, <br> si hacéis lo que yo os mando. <br>
                     Juan 15:14
                 </cite> 
             </p>
