Se agrega cuadro de informacion de la iglesia

--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
             <p id="texto_0">
                 <cite>
                     Vosotros sois mis amigos, <br> si hacéis lo que yo os mando. <br>
-                    Juan 15:14
+                    <i>Juan 15:14</i>  
                 </cite> 
             </p>
+            <div id="conocer">Conócenos</div>
         </main>
         <section>
             <p id="texto_1" class="textos">
