Se modifica estilo de portada

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main id="c-slider">
         <div id="slider">
             <section class="portada_vista" id="uno">
-                <img src="img/pez.jpg" width="auto" height="580">
+                <img src="imagenes/img_5.jpg" width="auto" height="580">
             </section>
             <section class="portada_1" id="dos">
                 <!--img src="img/biblia.jpg" width="850" height="580"-->
