Se agrega slider de imagenes y modifica fondo del resto del texto

--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
     </header>
     <main id="c-slider">
         <div id="slider">
-            <section class="portada_vista" id="uno">
-                <img src="imagenes/img_5.jpg" width="auto" height="580">
+            <section class="portada_vista portada" id="uno">
+                <img src="imagenes/img_1.jpg" width="auto" height="580">
             </section>
-            <section class="portada_1" id="dos">
-                <!--img src="img/biblia.jpg" width="850" height="580"-->
+            <section class="portada_1 portada" id="dos">
+                <img src="imagenes/img_2.jpg" width="850" height="580">
             </section>
-            <section class="portada_2" id="tres">
-                <!--img src="img/biblia_1.jpg" width="850" height="580"-->
+            <section class="portada_2 portada" id="tres">
+                <img src="imagenes/img_3.jpg" width="850" height="580">
             </section>
-            <section class="portada_3" id="cuatro">
-                <!--img src="img/biblia_2.jpg" width="850" height="580"-->
+            <section class="portada_3 portada" id="cuatro">
+                <img src="imagenes/img_4.jpg" width="850" height="580">
             </section>
-            <section class="portada_4" id="cinco">
-                <!--img src="img/cruz.jpg" width="850" height="580"-->
+            <section class="portada_4 portada" id="cinco">
+                <img src="imagenes/img_5.jpg" width="850" height="580">
             </section>
         </div>
-        <div id="btn-prev">&#60;</div>
-        <div id="btn-next">&#62;</div>
+        <div id="btn-prev" onclick="sumarSlider(-1)">&#60;</div>
+        <div id="btn-next" onclick="sumarSlider(1)">&#62;</div>
             <p id="texto_0">
                 <cite>
                     Vosotros sois mis amigos, <br> si hacéis lo que yo os mando. <br>
@@ -53,7 +53,7 @@
                 </cite> 
             </p>
             <div id="conocer">Conócenos</div>
-        <section>
+        <section id="presentacion">
             <p id="texto_1" class="textos">
                 <strong>Misión</strong><br>
                 Hacer conocer a las personas acerca de las enseñanzas, doctrinas y fundamentos
