Empieza la version 1 con modificaciones en los estilos e index

--- a/index.html
+++ b/index.html
@@ -19,63 +19,56 @@
             <ul>
                 <a href="#">Inicio</a>
                 <a href="#">Nosotros</a>
+                <a href="#">Servicios</a>
                 <a href="#">Blog</a>
+                <a href="#">Televisión</a>
                 <a href=" " onclick="radio()">Radio</a>
-                <a href="#">Contáctos</a>
-                <a href="#">Login</a>
             </ul>
         </nav>
     </header>
     <main id="c-slider">
         <div id="slider">
-            <section class="portada_vista portada" id="uno">
-                <img src="imagenes/img_1.jpg" width="auto" height="580">
+            <section class="portada">
+                <img src="imagenes/img_1.jpg" width="850" height="580">
             </section>
-            <section class="portada_1 portada" id="dos">
+            <section class="portada">
                 <img src="imagenes/img_2.jpg" width="850" height="580">
             </section>
-            <section class="portada_2 portada" id="tres">
+            <section class="portada">
                 <img src="imagenes/img_3.jpg" width="850" height="580">
             </section>
-            <section class="portada_3 portada" id="cuatro">
+            <section class="portada">
                 <img src="imagenes/img_4.jpg" width="850" height="580">
             </section>
-            <section class="portada_4 portada" id="cinco">
+            <section class="portada">
                 <img src="imagenes/img_5.jpg" width="850" height="580">
             </section>
         </div>
-        <div id="btn-prev" onclick="sumarSlider(-1)">&#60;</div>
-        <div id="btn-next" onclick="sumarSlider(1)">&#62;</div>
-            <p id="texto_0">
-                <cite>
-                    Vosotros sois mis amigos, <br> si hacéis lo que yo os mando. <br>
-                    <i>Juan 15:14</i>  
-                </cite> 
-            </p>
-            <div id="conocer">Conócenos</div>
-        <section id="presentacion">
-            <p id="texto_1" class="textos">
-                <strong>Misión</strong><br>
-                Hacer conocer a las personas acerca de las enseñanzas, doctrinas y fundamentos
-                que la Biblia enseña, y que lleguen al pleno conocimiento de la persona de 
-                Jesucristo, obedeciendo a ello con un testimonio real de lo que predicamos.
-            </p>
-            <p id="texto_2" class="textos">
-                <strong>Visión</strong><br>
-                Llegar a todas las personas con la palabra de Dios, así como también esas 
-                personas puedan tener una transformacion y vida nueva por medio del Espíritu Santo
-                para que con ello puedan testificar del amor de Dios al mundo.
-            </p>
-            <p id="texto_3" class="textos">
-                <strong>Valores</strong><br>
-                    Honestidad <br>
-                    Sinceridad <br>
-                    Transparencia <br>
-                    Amor <br>
-                    Compañerismo
-            </p>
-        </section>
+        <div id="btn-prev" >&#60;</div>
+        <div id="btn-next" >&#62;</div>
     </main>
     <script src="js/design.js"></script>
 </body>
+
+
+<!--
+
+ Misión
+    Hacer conocer a las personas acerca de las enseñanzas, doctrinas y fundamentos
+    que la Biblia enseña, y que lleguen al pleno conocimiento de la persona de 
+    Jesucristo, obedeciendo a ello con un testimonio real de lo que predicamos.
+
+Visión
+    Llegar a todas las personas con la palabra de Dios, así como también esas 
+    personas puedan tener una transformacion y vida nueva por medio del Espíritu Santo
+    para que con ello puedan testificar del amor de Dios al mundo.
+
+
+Valores
+    Honestidad 
+    Sinceridad 
+    Transparencia
+    Amor 
+    Compañerismo
+-->
 </html>
