--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <main id="c-slider">
         <div id="slider">
             <section class="portada">
-                <img src="imagenes/img_1.jpg" width="850" height="580">
+                <img src="imagenes/img_1.jpg" width="850" height="580">IMG1
             </section>
             <section class="portada">
-                <img src="imagenes/img_2.jpg" width="850" height="580">
+                <img src="imagenes/img_2.jpg" width="850" height="580">IMG2
             </section>
             <section class="portada">
-                <img src="imagenes/img_3.jpg" width="850" height="580">
+                <img src="imagenes/img_3.jpg" width="850" height="580">IMG3
             </section>
             <section class="portada">
-                <img src="imagenes/img_4.jpg" width="850" height="580">
+                <img src="imagenes/img_4.jpg" width="850" height="580">IMG4
             </section>
             <section class="portada">
-                <img src="imagenes/img_5.jpg" width="850" height="580">
+                <img src="imagenes/img_5.jpg" width="850" height="580">IMG5
             </section>
         </div>
         <div id="btn-prev" >&#60;</div>
