--- a/prueba.html
+++ b/prueba.html
@@ -1,53 +1,78 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-	<title>Ejemplo overflow</title>
-	<script src="https://code.jquery.com/jquery-3.4.0.js"></script>
-	<style>
-		p{
-			width: 100px;
-			height: 100px;
-			border: solid 1px #000;
-			text-align: center;
+	<title>Ejemplo aprenderaprogramar.com</title>
+	<meta charset="utf-8">
+	<script  src="https://code.jquery.com/jquery-3.3.1.js"></script>
+	<script type="text/javascript">
+
+		window.onload = function () {
+
+			var nov = document.getElementById("nov");
+
+			var elemsH = document.querySelectorAll("h1, h2, h3, h4, h5, h6");
+
+			for (var i=0;i<elemsH.length;i++) {
+
+				elemsH[i].addEventListener("mouseover", cambiarColor1);
+
+				elemsH[i].addEventListener("mouseout", cambiarColor2);
+			}
+
+			nov.addEventListener("mouseover", function() {
+				$("#nov").slideUp(500);
+			});
+
+			nov.addEventListener("mouseout", function() {
+				$("#nov").slideDown(500);
+			});
+
+			/*function entra() {
+				this.
+			}*/
+
+			function cambiarColor1() {
+				this.style.color = 'orange';
+			}
+
+			function cambiarColor2() {
+				this.style.color = 'brown';
+			}
+
 		}
 
-		#parrafo {
-			background: yellow;
-		}
-
-		#parrafo_2 {
-			background: red;
-		}
-		
-		div {
-			display: flex;
-		}
-
-	</style>
-</head>
-<body>
-	<h1>Titulo</h1>
-	<input type="button" value="Izquierda" class="button" id="izquierda">
-	<input type="button" value="Derecha" id="derecha" class="button">
-	<div>
-		<p id="parrafo">Primer Parrafo</p>
-		<p id="parrafo_2">Segundo Parrafo</p>
-		<p id="parrafo_3">Tercer Parrafo</p>
-	</div>
-	<script>
-		var elemento = $("#parrafo");
-		var elemento_2 = $("#parrafo_2");
-		var elemento_3 = $("#parrafo_3");
-
-		/*Va a Izquierda*/
-		$("#izquierda").click(function() {
-			$("p:first").insertAfter("p:last");
-		});
-
-		/*Va a Derecha*/
-		$("#derecha").click(function() {
-			$("p:last").insertBefore("p:first");
-		});
 	</script>
+</head>
+
+<body>
+	<p>
+		<a href="principal.html" title="Página principal" >Ir a la pagina principal</a>
+	</p>
+
+	<h1>Novedades</h1>
+	<p id="nov">Aquí presentamos las novedades del sitio. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+	<h3>Lanzamos el producto X-FASHION</h3>
+
+	<p>Este producto permite estirar la piel hasta dejarla como la de un bebé.</p>
+
+	<p>
+		<img src="http://i.imgur.com/tq5Bs.png" title="Imagen del producto" alt="imagen producto x-fashion" />
+	</p>
+
+	<h3>Mejoramos el producto T-MOTION</h3>
+
+	<p>Hemos lanzado una nueva versión del producto T-MOTION</p>
+
+	<p>
+		<img src="http://i.imgur.com/SpZyc.png" title="Imagen del proudcto tmotion" alt="imagen producto tmotion" />
+	</p>
+
 </body>
+
 </html>
