Se deja culminado(provisoriamente) la parte de portada y se comienza el contenido, se crea archivo css para dicho contenido

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         <div id="btn-prev" >&#60;</div>
         <div id="btn-next" >&#62;</div>
     </main>
+    <section id="editorial">
+        
+    </section>
     
     <script src="js/design.js"></script>
 </body>
