Se agrega editorial con sus estilos y se agrega efecto scroll

--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
         <div id="btn-next" >&#62;</div>
     </main>
     <section id="editorial">
-        
+        <div id="cont_editorial">
+            <h3>Una Iglesia que crece</h3>
+            <p>
+                Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. Creerle a Dios
+                implica aceptar Su palabra y entregarse para hacer su voluntad. Esto trae consigo..
+            </p>
+        </div>    
     </section>
     
     <script src="js/design.js"></script>
