Se hace margenes con bordes en la editorial

--- a/index.html
+++ b/index.html
@@ -53,16 +53,23 @@
         <div id="btn-prev" >&#60;</div>
         <div id="btn-next" >&#62;</div>
     </main>
-    <section id="editorial">
+    <section class="contenido">
         <div id="cont_editorial">
-            <h3>Una Iglesia que crece</h3>
+            <h3>Editorial</h3><br>
+            <h4>Una Iglesia que crece</h4>
             <p>
-                Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. Creerle a Dios
-                implica aceptar Su palabra y entregarse para hacer su voluntad. Esto trae consigo..
+                Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. Creerle a 
+                Dios implica aceptar Su palabra y entregarse para hacer su voluntad. Esto trae 
+                consigo.. <br><br>
+                <i>ver mas..</i>
             </p>
         </div>    
     </section>
-    
+    <section class="contenido">
+        <div>
+
+        </div>
+    </section>
     <script src="js/design.js"></script>
 </body>
 
