Se agrega imagen de fondo de la editorial y se cambia de color de fondo de la base

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p>
                 Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. Creerle a 
                 Dios implica aceptar Su palabra y entregarse para hacer su voluntad. Esto trae 
-                consigo.. <br>
+                consigo.. <br><br>
                 <i>ver mas..</i>
             </p>
         </div>    
