Se agrega informacion en el index con sus estilos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div id="btn-next" >&#62;</div>
     </main>
     <section class="contenido">
-        <div id="cont_editorial">
+        <div class="cont_editorial">
             <h3>Editorial</h3><br>
             <h4>Una Iglesia que crece</h4>
             <p>
@@ -66,8 +66,13 @@
         </div>    
     </section>
     <section class="contenido">
-        <div>
-
+        <div class="cont_editorial">
+            <h3>El Plan de salud de Dios</h3>
+            <p>
+                La atención médica de primera no tiene precio--
+                sin embargo, ¿no sería algo maraavilloso si no 
+                necesitáramos más a los médicos?
+            </p>
         </div>
     </section>
     <script src="js/design.js"></script>
