Se agregan imagenes de fondo a la editorial y la info

--- a/index.html
+++ b/index.html
@@ -61,17 +61,18 @@
                 Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. Creerle a 
                 Dios implica aceptar Su palabra y entregarse para hacer su voluntad. Esto trae 
                 consigo.. <br><br>
-                <i>ver mas..</i>
+                <i id="pagina_edit">ver mas..</i>
             </p>
         </div>    
     </section>
     <section class="contenido">
-        <div class="cont_editorial">
+        <div class="cont_info">
             <h3>El Plan de salud de Dios</h3>
             <p>
-                La atención médica de primera no tiene precio--
+                La atención médica de primera no tiene precio,
                 sin embargo, ¿no sería algo maraavilloso si no 
-                necesitáramos más a los médicos?
+                necesitáramos más a los médicos? <br><br>
+                <i id="pagina_info">ver mas..</i>
             </p>
         </div>
     </section>
