Se agrega publicaciones en api de facebook

--- a/index.html
+++ b/index.html
@@ -76,6 +76,28 @@
             </p>
         </div>
     </section>
+    <section class="contenido">
+        <div id="redes_soc">
+                <div id="fb-root"></div>
+                <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v3.3"></script>
+            <div class="fb-post" data-href="https://www.facebook.com/iglesiabautistapanambireta/photos/ms.c.eJw1zNsNADEIA8GOTjzsAP03dgqBz9FiaAmoZzCh5R~_v5QSMUq7jeLaxCq6zMJ3sjt37uz~_7z~;5v29W8LfkDcFgZvg~-~-.bps.a.528440300917635/528441387584193/?type=3&amp;theater" data-width="350" data-show-text="true">
+                <blockquote cite="https://developers.facebook.com/iglesiabautistapanambireta/posts/528441387584193" class="fb-xfbml-parse-ignore">
+                    <p>Emotiva presentacion de sus padres e familiares a Oscar Samuel al Señor. Dios te bendiga Samuelito, que crezcas fuerte y sano en la presencia de nuestro Dios.</p>Publicada por 
+                    <a href="https://www.facebook.com/iglesiabautistapanambireta/">Iglesia Bautista Panambi Reta</a> 
+                    en&nbsp;<a href="https://developers.facebook.com/iglesiabautistapanambireta/posts/528441387584193">Domingo, 2 de septiembre de 2018</a>
+                </blockquote>
+            </div>
+
+            <div class="fb-post" data-href="https://www.facebook.com/iglesiabautistapanambireta/photos/ms.c.eJw1jskNADEIAztacRgD~;Te2CiHP0dgGUF1YKk241ofDnX1YTIZVRJIuZCxHwTotscySprfrMmrymrvHHO5a7zF5vr5guN8~_7j2L7df9R2UZPD61N686~_Xh7dvt4fcr519OWI2cPj4XHw~;h8XI8fh4Y50g~-~-.bps.a.461306740964325/461306810964318/?type=3&amp;theater" data-width="350" data-show-text="true">
+                <blockquote cite="https://developers.facebook.com/iglesiabautistapanambireta/posts/461306810964318" class="fb-xfbml-parse-ignore">
+                    <p>Domingo dedicado a la familia, junto con la Lic. Yolanda. Domingo de bendicion!</p>
+                    Publicada por 
+                    <a href="https://www.facebook.com/iglesiabautistapanambireta/">Iglesia Bautista Panambi Reta</a> 
+                    en&nbsp;<a href="https://developers.facebook.com/iglesiabautistapanambireta/posts/461306810964318">Domingo, 17 de junio de 2018</a>
+                </blockquote>
+            </div>
+        </div>
+    </section>
     <script src="js/design.js"></script>
 </body>
 
