Se edita colores de menu y submenu, se agrega iconos de redes sociale en el pie de pagina

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <input type="checkbox" id="btn-menu">
-        <label for="btn-menu"><img src="img/icono_menu.png" width="60" height="60"></label>
+        <label for="btn-menu"><img src="img/icono_menu_2.png" width="60" height="60"></label>
 		<h1 class="titulos">IBPR</h1>
 		<img src="img/cruz_icono.png" width="50" height="40" id="icono-cruz">
         <h2 class="titulos">Ministerio Amigos de Jesús</h2>
@@ -76,7 +76,7 @@
             </p>
         </div>
     </section>
-    <section class="contenido">
+    <!--section class="contenido">
         <div id="redes_soc">
                 <div id="fb-root"></div>
                 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v3.3"></script>
@@ -97,7 +97,18 @@
                 </blockquote>
             </div>
         </div>
-    </section>
+    </section-->
+
+    <footer id="pie">
+        <p id="mi_pie">&copy; 2019 - IBPR - M. Amigos de Jesús</p><br>
+        <div id="redes">
+            <a href="#" class="icon-facebook"></a>
+            <a href="#" class="icon-twitter"></a>
+            <a href="#" class="icon-instagram"></a>
+            <a href="#" class="icon-youtube"></a>
+        </div>
+        
+    </footer>
     <script src="js/design.js"></script>
 </body>
 
