Se edita archivo principal, agregando textos y un div para unificar los contenidos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <a href="#">Inicio</a>
                 <a href="#">Nosotros</a>
-                <a href="#" id="serv">Servicios
+                <a id="serv">Servicios
                     <ul id="menu_serv">
                         <li>Actividades</li>
                         <li>Consejería</li>
@@ -53,51 +53,66 @@
         <div id="btn-prev" >&#60;</div>
         <div id="btn-next" >&#62;</div>
     </main>
-    <section class="contenido">
-        <div class="cont_editorial">
-            <h3>Editorial</h3><br>
-            <h4>Una Iglesia que crece</h4>
-            <p>
-                Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. Creerle a 
-                Dios implica aceptar Su palabra y entregarse para hacer su voluntad. Esto trae 
-                consigo.. <br><br>
-                <i id="pagina_edit">ver mas..</i>
-            </p>
-        </div>    
-    </section>
-    <section class="contenido">
-        <div class="cont_info">
-            <h3>El Plan de salud de Dios</h3>
-            <p>
-                La atención médica de primera no tiene precio,
-                sin embargo, ¿no sería algo maraavilloso si no 
-                necesitáramos más a los médicos? <br><br>
-                <i id="pagina_info">ver mas..</i>
-            </p>
-        </div>
-    </section>
-    <!--section class="contenido">
-        <div id="redes_soc">
-                <div id="fb-root"></div>
-                <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v3.3"></script>
-            <div class="fb-post" data-href="https://www.facebook.com/iglesiabautistapanambireta/photos/ms.c.eJw1zNsNADEIA8GOTjzsAP03dgqBz9FiaAmoZzCh5R~_v5QSMUq7jeLaxCq6zMJ3sjt37uz~_7z~;5v29W8LfkDcFgZvg~-~-.bps.a.528440300917635/528441387584193/?type=3&amp;theater" data-width="350" data-show-text="true">
-                <blockquote cite="https://developers.facebook.com/iglesiabautistapanambireta/posts/528441387584193" class="fb-xfbml-parse-ignore">
-                    <p>Emotiva presentacion de sus padres e familiares a Oscar Samuel al Señor. Dios te bendiga Samuelito, que crezcas fuerte y sano en la presencia de nuestro Dios.</p>Publicada por 
-                    <a href="https://www.facebook.com/iglesiabautistapanambireta/">Iglesia Bautista Panambi Reta</a> 
-                    en&nbsp;<a href="https://developers.facebook.com/iglesiabautistapanambireta/posts/528441387584193">Domingo, 2 de septiembre de 2018</a>
-                </blockquote>
+    <div id="content">
+        <section class="contenido">
+            <div class="cont_editorial">
+                <h3>Editorial</h3><br>
+                <h4>Una Iglesia que crece</h4>
+                <p>
+                    Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. Creerle a 
+                    Dios implica aceptar Su palabra y entregarse para hacer su voluntad. Esto trae 
+                    consigo.. <br><br>
+                    <i id="pagina_edit">ver mas..</i>
+                </p>
+            </div>    
+        </section>
+        <section class="contenido">
+            <div class="cont_info">
+                <h3>El Plan de salud de Dios</h3>
+                <p>
+                    La atención médica de primera no tiene precio,
+                    sin embargo, ¿no sería algo maraavilloso si no 
+                    necesitáramos más a los médicos? <br><br>
+                    <i id="pagina_info">ver mas..</i>
+                </p>
             </div>
-
-            <div class="fb-post" data-href="https://www.facebook.com/iglesiabautistapanambireta/photos/ms.c.eJw1jskNADEIAztacRgD~;Te2CiHP0dgGUF1YKk241ofDnX1YTIZVRJIuZCxHwTotscySprfrMmrymrvHHO5a7zF5vr5guN8~_7j2L7df9R2UZPD61N686~_Xh7dvt4fcr519OWI2cPj4XHw~;h8XI8fh4Y50g~-~-.bps.a.461306740964325/461306810964318/?type=3&amp;theater" data-width="350" data-show-text="true">
-                <blockquote cite="https://developers.facebook.com/iglesiabautistapanambireta/posts/461306810964318" class="fb-xfbml-parse-ignore">
-                    <p>Domingo dedicado a la familia, junto con la Lic. Yolanda. Domingo de bendicion!</p>
-                    Publicada por 
-                    <a href="https://www.facebook.com/iglesiabautistapanambireta/">Iglesia Bautista Panambi Reta</a> 
-                    en&nbsp;<a href="https://developers.facebook.com/iglesiabautistapanambireta/posts/461306810964318">Domingo, 17 de junio de 2018</a>
-                </blockquote>
+        </section>
+        <section class="contenido">
+            <div class="cont_evan">
+                <h3>¡Usted lo vale!</h3>
+                <p>
+                    Este titulo hace referecia a una publicidad muy 
+                    conocidade un producto de belleza. Tuvo gran exito, 
+                    y podemos prguntarnos a que se debe. ¿Será porque 
+                    la expresion alimenta la buena opinion que cada uno 
+                    tiene de si mismo?
+                    <i id="pagina_evan"></i>
+                </p>
             </div>
-        </div>
-    </section-->
+        </section>
+        <!--section class="contenido">
+            <div id="redes_soc">
+                    <div id="fb-root"></div>
+                    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v3.3"></script>
+                <div class="fb-post" data-href="https://www.facebook.com/iglesiabautistapanambireta/photos/ms.c.eJw1zNsNADEIA8GOTjzsAP03dgqBz9FiaAmoZzCh5R~_v5QSMUq7jeLaxCq6zMJ3sjt37uz~_7z~;5v29W8LfkDcFgZvg~-~-.bps.a.528440300917635/528441387584193/?type=3&amp;theater" data-width="350" data-show-text="true">
+                    <blockquote cite="https://developers.facebook.com/iglesiabautistapanambireta/posts/528441387584193" class="fb-xfbml-parse-ignore">
+                        <p>Emotiva presentacion de sus padres e familiares a Oscar Samuel al Señor. Dios te bendiga Samuelito, que crezcas fuerte y sano en la presencia de nuestro Dios.</p>Publicada por 
+                        <a href="https://www.facebook.com/iglesiabautistapanambireta/">Iglesia Bautista Panambi Reta</a> 
+                        en&nbsp;<a href="https://developers.facebook.com/iglesiabautistapanambireta/posts/528441387584193">Domingo, 2 de septiembre de 2018</a>
+                    </blockquote>
+                </div>
+    
+                <div class="fb-post" data-href="https://www.facebook.com/iglesiabautistapanambireta/photos/ms.c.eJw1jskNADEIAztacRgD~;Te2CiHP0dgGUF1YKk241ofDnX1YTIZVRJIuZCxHwTotscySprfrMmrymrvHHO5a7zF5vr5guN8~_7j2L7df9R2UZPD61N686~_Xh7dvt4fcr519OWI2cPj4XHw~;h8XI8fh4Y50g~-~-.bps.a.461306740964325/461306810964318/?type=3&amp;theater" data-width="350" data-show-text="true">
+                    <blockquote cite="https://developers.facebook.com/iglesiabautistapanambireta/posts/461306810964318" class="fb-xfbml-parse-ignore">
+                        <p>Domingo dedicado a la familia, junto con la Lic. Yolanda. Domingo de bendicion!</p>
+                        Publicada por 
+                        <a href="https://www.facebook.com/iglesiabautistapanambireta/">Iglesia Bautista Panambi Reta</a> 
+                        en&nbsp;<a href="https://developers.facebook.com/iglesiabautistapanambireta/posts/461306810964318">Domingo, 17 de junio de 2018</a>
+                    </blockquote>
+                </div>
+            </div>
+        </section-->
+    </div>
 
     <footer id="pie">
         <p id="mi_pie">&copy; 2019 - IBPR - M. Amigos de Jesús</p><br>
