--- a/index.html
+++ b/index.html
@@ -55,30 +55,30 @@
     </main>
     <div id="content">
         <section class="contenido">
-            <div class="cont_editorial">
+            <div id="cont_editorial" class="cont">
                 <h3>Editorial</h3><br>
                 <h4>Una Iglesia que crece</h4>
                 <p>
                     Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. Creerle a 
                     Dios implica aceptar Su palabra y entregarse para hacer su voluntad. Esto trae 
                     consigo.. <br><br>
-                    <i id="pagina_edit">ver mas..</i>
+                    <i id="pagina_edit" class="ver_mas">ver mas..</i>
                 </p>
             </div>    
         </section>
         <section class="contenido">
-            <div class="cont_info">
+            <div id="cont_info" class="cont">
                 <h3>El Plan de salud de Dios</h3>
                 <p>
                     La atención médica de primera no tiene precio,
                     sin embargo, ¿no sería algo maraavilloso si no 
                     necesitáramos más a los médicos? <br><br>
-                    <i id="pagina_info">ver mas..</i>
+                    <i id="pagina_info" class="ver_mas">ver mas..</i>
                 </p>
             </div>
         </section>
         <section class="contenido">
-            <div class="cont_evan">
+            <div class="cont" id="cont_evan">
                 <h3>¡Usted lo vale!</h3>
                 <p>
                     Este titulo hace referecia a una publicidad muy 
@@ -86,7 +86,7 @@
                     y podemos prguntarnos a que se debe. ¿Será porque 
                     la expresion alimenta la buena opinion que cada uno 
                     tiene de si mismo?
-                    <i id="pagina_evan"></i>
+                    <i id="pagina_evan" class="ver_mas">Ver mas..</i>
                 </p>
             </div>
         </section>
@@ -117,10 +117,10 @@
     <footer id="pie">
         <p id="mi_pie">&copy; 2019 - IBPR - M. Amigos de Jesús</p><br>
         <div id="redes">
-            <a href="#" class="icon-facebook"></a>
-            <a href="#" class="icon-twitter"></a>
-            <a href="#" class="icon-instagram"></a>
-            <a href="#" class="icon-youtube"></a>
+            <a href="http://facebook.com" class="icon-facebook"></a>
+            <a href="http://twitter.com" class="icon-twitter"></a>
+            <a href="http://instagram.com" class="icon-instagram"></a>
+            <a href="http://youtube.com" class="icon-youtube"></a>
         </div>
         
     </footer>
