Se realiza prueba de css

--- a/prueba.html
+++ b/prueba.html
@@ -8,33 +8,23 @@
 	</script>
 
 	<style>
-		img {
-			filter: opacity(.5);
-		}
-
-		p {
-			position: absolute;
-			top: 450px;
-			left: 150px;
+		.ejemplo:nth-child(2) {
 			color: red;
 		}
 	</style>
 </head>
 <body>
-	<h1>Titulo</h1>
 	<div>
-		<img src="imagenes/crecimiento.jpeg" width="300" height="200">
-		<div id="fb-root"></div>
-                <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v3.3"></script>
-            <div class="fb-post" data-href="https://www.facebook.com/iglesiabautistapanambireta/photos/ms.c.eJw1zNsNADEIA8GOTjzsAP03dgqBz9FiaAmoZzCh5R~_v5QSMUq7jeLaxCq6zMJ3sjt37uz~_7z~;5v29W8LfkDcFgZvg~-~-.bps.a.528440300917635/528441387584193/?type=3&amp;theater" data-width="350" data-show-text="true">
-                <blockquote cite="https://developers.facebook.com/iglesiabautistapanambireta/posts/528441387584193" class="fb-xfbml-parse-ignore">
-                    <p>Emotiva presentacion de sus padres e familiares a Oscar Samuel al Señor. Dios te bendiga Samuelito, que crezcas fuerte y sano en la presencia de nuestro Dios.</p>Publicada por 
-                    <a href="https://www.facebook.com/iglesiabautistapanambireta/">Iglesia Bautista Panambi Reta</a> 
-                    en&nbsp;<a href="https://developers.facebook.com/iglesiabautistapanambireta/posts/528441387584193">Domingo, 2 de septiembre de 2018</a>
-                </blockquote>
-            </div>
+		<section class="ejemplo">
+			<p>Primero</p>
+		</section>
+		<section class="ejemplo">
+			<p>Segundo</p>
+		</section>
+		<section class="ejemplo">
+			<p>Terecero</p>
+		</section>
 	</div>
-	<p> <b>Texto culaquiera</b> </p>
 </body>
 
 </html>
