--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <script  src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <title>IBPR</title>
 </head>
@@ -17,7 +17,7 @@
         <h2 class="titulos">Ministerio Amigos de Jesús</h2>
         <nav class="menu">
             <ul>
-                <a href="#">Inicio</a>
+                <a href="index.html">Inicio</a>
                 <a href="#">Nosotros</a>
                 <a id="serv">Servicios
                     <ul id="menu_serv">
